# VoidCare

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VoidCare.sln
app/: CMakeLists.txt  VoidCare.manifest  backend_dispatcher.cpp  backend_dispatcher.h  main.cpp  ui_state.cpp  ui_state.h  ui_theme.cpp  ui_theme.h  voidcare.rc
bridge/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  cli_common.cpp  cli_common.h  voidcare_main.cpp
core/: CMakeLists.txt
core/include/voidcare/core/: antivirus_providers.h  av_discovery_service.h  destructive_action_guard.h  discord_rpc_service.h  gaming_boost_service.h  optimization_service.h  parser_utils.h  persistence_audit_service.h  process_runner.h  restore_point_service.h  suspicious_file_scanner_service.h  types.h  windows_apps_service.h
core/src/: antivirus_providers.cpp  av_discovery_service.cpp  destructive_action_guard.cpp  discord_rpc_service.cpp  gaming_boost_service.cpp  optimization_service.cpp  parser_utils.cpp  persistence_audit_service.cpp  process_runner.cpp  restore_point_service.cpp  suspicious_file_scanner_service.cpp  types.cpp  windows_apps_service.cpp
platform/windows/: CMakeLists.txt
platform/windows/include/voidcare/platform/windows/: admin_utils.h  hash_utils.h  signature_verifier.h  windows_paths.h
platform/windows/src/: admin_utils.cpp  hash_utils.cpp  signature_verifier.cpp  windows_paths.cpp
scripts/: build.ps1  configure.ps1  package-portable.ps1  publish.ps1  restore.ps1  smoke-test.ps1  test.ps1
src/VoidCare.Cli/: Program.cs  VoidCare.Cli.csproj
src/VoidCare.Cli/Commands/: CommandDispatcher.Workflows.cs  CommandDispatcher.cs
src/VoidCare.Cli/Interactive/: InteractiveMenu.cs
src/VoidCare.Cli/Rendering/: TerminalRenderer.cs
src/VoidCare.Cli/Runtime/: CommandResult.cs  InvocationParser.cs  JsonEventWriter.cs  NativeMethods.cs
src/VoidCare.Core/: VoidCare.Core.csproj
src/VoidCare.Core/Data/: BloatCatalog.json
src/VoidCare.Core/Models/: CommandModels.cs  SecurityModels.cs  SystemModels.cs
src/VoidCare.Core/Services/: BloatCatalogService.cs  SuspiciousHeuristics.cs
src/VoidCare.Infrastructure/: VoidCare.Infrastructure.csproj
src/VoidCare.Infrastructure/Interop/: WinTrustNative.cs
src/VoidCare.Infrastructure/Services/: FileSecurityServices.cs  OperationsServices.cs  ProcessServices.cs  SecurityServices.cs  SuspiciousFileService.cs  SystemServices.cs
tests/: CMakeLists.txt
tests/VoidCare.Tests/: VoidCare.Tests.csproj
tests/VoidCare.Tests/Unit/: BloatCatalogTests.cs  InvocationParserTests.cs  JsonEventWriterTests.cs  SuspiciousHeuristicsTests.cs
tests/integration/: test_process_runner.cpp  test_restore_guard.cpp
tests/unit/: test_cli_parser.cpp  test_cli_rendering.cpp  test_discord_codec.cpp  test_manifest_roundtrip.cpp  test_parser_helpers.cpp  test_quarantine_index.cpp  test_suspicious_scoring.cpp
ui/: App.xaml  App.xaml.cs  CMakeLists.txt  VoidCare.Wpf.csproj  app.manifest
ui/Converters/: PageMatchConverter.cs  WidthToColumnsConverter.cs
ui/Models/: ActionResult.cs  InstalledAppRow.cs  PersistenceEntryRow.cs  QuarantineEntryRow.cs  RowModelBase.cs  SuspiciousFileRow.cs
ui/Services/: BridgeClient.cs  BridgeDtos.cs  IBridgeClient.cs  INavigationService.cs  NavigationService.cs
ui/Theme/: Cards.xaml  Colors.xaml  Controls.xaml
ui/ViewModels/: AsyncRelayCommand.cs  MainViewModel.cs  RelayCommand.cs  ViewModelBase.cs
ui/Views/: ShellWindow.xaml  ShellWindow.xaml.cs
ui/Views/Pages/: AboutPage.xaml  AboutPage.xaml.cs  AppsPage.xaml  AppsPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  GamingPage.xaml  GamingPage.xaml.cs  OptimizePage.xaml  OptimizePage.xaml.cs  SecurityPage.xaml  SecurityPage.xaml.cs
ui/include/voidcare/ui/: app_controller.h  persistence_model.h  suspicious_model.h
ui/qml/: Main.qml  qml.qrc
ui/qml/components/: AccentButton.qml  GlassCard.qml
ui/qml/pages/: AboutPage.qml  AppsPage.qml  DashboardPage.qml  GamingPage.qml  OptimizePage.qml  SecurityPage.qml
ui/src/: app_controller.cpp  persistence_model.cpp  suspicious_model.cpp
